--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">NotesApp</string>
+    <string name="date_created">Note created: </string>
+    <string name="date_modified">Last modified: </string>
+    <string name="note_title_hint">Title</string>
+    <string name="note_text_hint">Text</string>
+    <string name="add_note_button">Done</string>
+    <string name="back_to_list_button">All Notes</string>
 </resources>
